<resources>
    <string name="app_name">plentiful</string>
    <string name="register">New User? \n<u>Click to Register</u></string>
    <string name="forget_password_email_entry">Enter your registered email id here</string>
    <string name="submit">Submit</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">My Cart</string>
    <string name="categories">Categories</string>
    <string name="orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="about">About Us</string>
    <string name="title_activity_home1">Home1Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PLENTIFUL</string>
    <string name="nav_header_subtitle">welcome</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>