<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.plentiful.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.plentiful.ui.myprofile.MyProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.plentiful.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.plentiful.ui.category.CategoryFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.plentiful.ui.category.CategoryFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.plentiful.ui.category.CategoryFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.plentiful.ui.category.CategoryFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_category" />
</navigation>